# r2r-scrapy

./: .gitignore  CODES.md  IMPORTS.md  README.md  TASKS.md  justfile  pyproject.toml
docs/: api.md  configuration.md  installation.md
r2r_scrapy/: __init__.py  config.py  direct_spider.py  main.py  settings.py
r2r_scrapy/chunkers/: __init__.py  code_chunker.py  markdown_chunker.py  recursive_chunker.py  semantic_chunker.py
r2r_scrapy/cli/: __init__.py  main.py
r2r_scrapy/cli/commands/: __init__.py  base_command.py  create_collection_command.py  delete_collection_command.py  generate_report_command.py  get_document_command.py  list_collections_command.py  list_documents_command.py  scrape_command.py
r2r_scrapy/exporters/: __init__.py  file_exporter.py  r2r_exporter.py
r2r_scrapy/integrations/: __init__.py  github_integration.py  stackoverflow_integration.py  wikipedia_integration.py
r2r_scrapy/middleware/: __init__.py  javascript_middleware.py
r2r_scrapy/pipelines/: __init__.py  chunking_pipeline.py  content_pipeline.py  preprocessing_pipeline.py  r2r_pipeline.py
r2r_scrapy/processors/: __init__.py  api_processor.py  code_processor.py  html_processor.py  markdown_processor.py
r2r_scrapy/security/: __init__.py  key_manager.py  secure_logger.py
r2r_scrapy/spiders/: __init__.py  api_doc_spider.py  api_spider.py  blog_spider.py  github_spider.py  tutorial_spider.py
r2r_scrapy/utils/: __init__.py  quality_monitor.py  resource_manager.py  url_prioritizer.py  version_control.py
tests/: test_chunkers.py  test_cli_commands.py  test_cli_main.py  test_config.py  test_exporters.py  test_processors.py
